--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,236 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:stretchColumns="*"
-    android:background="#01579B"
-    android:gravity="bottom"
+    android:orientation="vertical"
+    android:id="@+id/fragment1"
     tools:context=".MainActivity">
 
-    <TableRow>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_span="4"
-            android:text="0"
-            android:id="@+id/txresult"
-            android:maxLines="2"
-            android:maxLength="17"
-            android:background="#616161"
-            android:textColor="#fff"
-            android:textSize="60sp"
-            android:textStyle="bold" />
-    </TableRow>
-
-    <TableRow>
-
-        <Button
-            android:onClick="onClickClear"
-            android:id="@+id/clear"
-            android:padding="20dp"
-            android:layout_margin="1dp"
-            android:background="#E0E0E0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/c"
-            android:textSize="@dimen/size30sp" />
-
-        <Button
-            android:onClick="onClickDoi"
-            android:padding="20dp"
-            android:layout_margin="1dp"
-            android:background="#E0E0E0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="+/_"
-            android:textSize="@dimen/size30sp" />
-
-        <Button
-            android:onClick="onClickOperator"
-            android:padding="20dp"
-            android:layout_margin="1dp"
-            android:background="#E0E0E0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="%"
-            android:textSize="@dimen/size30sp" />
-
-        <Button
-            android:onClick="onClickOperator"
-            android:padding="20dp"
-            android:layout_margin="1dp"
-            android:background="#F57F17"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="/"
-            android:textSize="@dimen/size30sp" />
-    </TableRow>
-
-    <TableRow>
-
-        <Button
-            android:onClick="onClickNumber"
-            android:padding="20dp"
-            android:layout_margin="1dp"
-            android:background="#E0E0E0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="7"
-            android:textSize="@dimen/size30sp" />
-
-        <Button
-            android:onClick="onClickNumber"
-            android:padding="20dp"
-            android:layout_margin="1dp"
-            android:background="#E0E0E0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="8"
-            android:textSize="@dimen/size30sp" />
-
-        <Button
-            android:onClick="onClickNumber"
-            android:padding="20dp"
-            android:layout_margin="1dp"
-            android:background="#E0E0E0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="9"
-            android:textSize="@dimen/size30sp" />
-
-        <Button
-            android:onClick="onClickOperator"
-            android:padding="20dp"
-            android:layout_margin="1dp"
-            android:background="#F57F17"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="*"
-            android:textSize="@dimen/size30sp" />
-    </TableRow>
-
-    <TableRow>
-
-        <Button
-            android:onClick="onClickNumber"
-            android:padding="20dp"
-            android:layout_margin="1dp"
-            android:background="#E0E0E0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="4"
-            android:textSize="@dimen/size30sp" />
-
-        <Button
-            android:onClick="onClickNumber"
-            android:padding="20dp"
-            android:layout_margin="1dp"
-            android:background="#E0E0E0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="5"
-            android:textSize="@dimen/size30sp" />
-
-        <Button
-            android:onClick="onClickNumber"
-            android:padding="20dp"
-            android:layout_margin="1dp"
-            android:background="#E0E0E0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="6"
-            android:textSize="@dimen/size30sp" />
-
-        <Button
-            android:onClick="onClickOperator"
-            android:padding="20dp"
-            android:background="#F57F17"
-            android:layout_margin="1dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="+"
-            android:textSize="@dimen/size30sp" />
-    </TableRow>
-
-    <TableRow>
-
-        <Button
-            android:onClick="onClickNumber"
-            android:padding="20dp"
-            android:background="#E0E0E0"
-            android:layout_margin="1dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="1"
-            android:textSize="@dimen/size30sp" />
-
-        <Button
-            android:onClick="onClickNumber"
-            android:padding="20dp"
-            android:layout_margin="1dp"
-            android:background="#E0E0E0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="2"
-            android:textSize="@dimen/size30sp" />
-
-        <Button
-            android:onClick="onClickNumber"
-            android:padding="20dp"
-            android:layout_margin="1dp"
-            android:background="#E0E0E0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="3"
-            android:textSize="@dimen/size30sp" />
-
-        <Button
-            android:onClick="onClickOperator"
-            android:padding="20dp"
-            android:layout_margin="1dp"
-            android:background="#F57F17"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="-"
-            android:textSize="@dimen/size30sp" />
-    </TableRow>
-
-    <TableRow>
-
-        <Button
-            android:onClick="onClickNumber"
-            android:padding="20dp"
-            android:layout_margin="1dp"
-            android:background="#E0E0E0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_span="2"
-            android:text="0"
-            android:textSize="@dimen/size30sp" />
-
-        <Button
-            android:onClick="onClickNumber"
-            android:padding="20dp"
-            android:layout_margin="1dp"
-            android:background="#E0E0E0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="."
-            android:textSize="@dimen/size30sp" />
-
-        <Button
-            android:onClick="onClickEquals"
-            android:padding="20dp"
-            android:layout_margin="1dp"
-            android:background="#F57F17"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="="
-            android:textSize="@dimen/size30sp" />
-
-    </TableRow>
-
-</TableLayout>
+</LinearLayout>
